# DesignPatterns

./: .gitignore  AbstractFactory.h  Adapter.h  ArrayBackedProperties.h  Builder.h  CMakeLists.txt  ClassicSingelton.h  CompositeBuilderPerson.h  CopyConstructionPrototype.h  DynamicDecorator.h  Factory.h  FlyWeight.h  Groovy.h  GroupObject.h  NeuralNetwork.h  PrototypeFactory.h  README.md  StaticDecorator.h  compositebuilder.cpp  compositebuilder.h  main.cpp
